Update build.gradle for Java 17